--- a/NapkinStudio/pom.xml
+++ b/NapkinStudio/pom.xml
@@ -153,6 +153,20 @@
             <artifactId>xercesImpl</artifactId>
             <version>2.8.1</version>
         </dependency>
+        
+        <!-- https://mvnrepository.com/artifact/com.thoughtworks.xstream/xstream -->
+		<dependency>
+		    <groupId>com.thoughtworks.xstream</groupId>
+		    <artifactId>xstream</artifactId>
+		    <version>1.4.9</version>
+		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/commons-net/commons-net -->
+		<dependency>
+		    <groupId>commons-net</groupId>
+		    <artifactId>commons-net</artifactId>
+		    <version>2.0</version>
+		</dependency>
 
     </dependencies>
 
