--- a/NapkinStudio/pom.xml
+++ b/NapkinStudio/pom.xml
@@ -174,7 +174,21 @@
 		    <version>2.0</version>
 		</dependency>
 
-    </dependencies>
+		<!-- Apache Commons FileUpload -->
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>LATEST</version>
+		</dependency>
+
+		<!-- Apache Commons IO -->
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>LATEST</version>
+		</dependency>
+
+	</dependencies>
 
 
 
