--- a/NapkinStudio/pom.xml
+++ b/NapkinStudio/pom.xml
@@ -188,7 +188,6 @@
 			<version>LATEST</version>
 		</dependency>
 
-
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
@@ -206,11 +205,18 @@
 			<version>1.9.12</version>
 		</dependency>
 
+
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>LATEST</version>
 			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>commons-lang</groupId>
+			<artifactId>commons-lang</artifactId>
+			<version>LATEST</version>
 		</dependency>
 
 
