--- a/NapkinStudio/src/main/resources/project.properties
+++ b/NapkinStudio/src/main/resources/project.properties
@@ -9,3 +9,8 @@ hibernate.dialect = org.hibernate.dialect.MySQLDialect
 hibernate.show_sql = true
 hibernate.format_sql = true
 hibernate.hbm2ddl.auto = validate
+
+#ftp properties
+ftp.host = localhost
+ftp.user = catdogcat
+ftp.pass = 2cats1dog
