--- a/NapkinStudio/src/main/resources/project.properties
+++ b/NapkinStudio/src/main/resources/project.properties
@@ -14,3 +14,5 @@ hibernate.hbm2ddl.auto = validate
 ftp.host = localhost
 ftp.user = catdogcat
 ftp.pass = 2cats1dog
+
+logging.file  = D:/saphana/logs/info.log
