--- a/NapkinStudio/pom.xml
+++ b/NapkinStudio/pom.xml
@@ -258,7 +258,13 @@
             <scope>test</scope>
         </dependency>
 
-
+		<!-- https://mvnrepository.com/artifact/com.jcraft/jsch -->
+		<dependency>
+		    <groupId>com.jcraft</groupId>
+		    <artifactId>jsch</artifactId>
+		    <version>0.1.53</version>
+		</dependency>
+		
 
 	</dependencies>
 
